Fix the problem of too long default height

--- a/src/components/HomePage/bookListContent.less
+++ b/src/components/HomePage/bookListContent.less
@@ -1,6 +1,6 @@
 .listPageContainer{
     .listPageLayout { 
-        width: 100vw; height: 80rem; 
+        width: 100vw; min-height: 100vh;
         //background-color: green; // 레이아웃 확인용
         .listPageContent {
             //width: 100%;
