--- a/src/components/InfoPage/infoPageLayout.less
+++ b/src/components/InfoPage/infoPageLayout.less
@@ -1,6 +1,6 @@
 .infoPageContainer{
     .infoPageLayout { 
-        width: 100vw; height: 80rem; 
+        width: 100vw; min-height: 100vh;
         .infoPageContent {
             //width: 100%;
             height: 100%;
